Optional buffer in as bind group.